--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
          <div class="container">
              <div class="navbar-header">
                  <div class="img"><img src="img/main-logo.png" alt=""></div>
+                 <div class="imggosder"> <img src="img/sticky-logo.png" alt=""> </div>
              </div>
              <div class="menyu" id="bs-example-navbar-collapse-1 ">
                         <ul class="nav navbar-right">
