--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
                     <div class="container">
                         <div class="navbar-header">
                             <div class="img"><img src="img/main-logo.png" alt=""></div>
+                            <div class="imggosder"> <img src="img/sticky-logo.png" alt=""> </div>
                         </div>
                         <div class="menyu" id="bs-example-navbar-collapse-1 ">
                                    <ul class="nav navbar-right">
@@ -177,11 +178,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                        <div class="all">
+                        <div class="alls">
                                 <ul>
                                     <li class="mylist all activeall"><p>All</p><div class="xet1"></div></li>
                                     <li class="mylist clients"><p>Clients</p><div class="xet1"></div></li>
-                                    <li class="mylist restaurant"><p>Reataurant</p><div class="xet1"></div></li>
+                                    <li class="mylist restaurant"><p>Restaurant</p><div class="xet1"></div></li>
                                     <li class="mylist staff"><p>Staff</p><div class="xet1"></div></li>
                                 </ul>
                         </div> 
@@ -192,6 +193,9 @@
     <section id="allmenu">
     <div class="container">
         <div class="row">
+           <div class="allmenu1">
+               <div class="container">
+                   <div class="row">  
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="imgallmenu">
                     <img src="img/all1.jpg" alt="">
@@ -276,6 +280,104 @@
                     <i class="fas fa-plus"></i>
                 </div>
             </div>
+            </div>
+            </div>
+           </div>
+           <div class="allmenu2">
+            <div class="container">
+                <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all7.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+                </div>
+            </div>
+           </div>
+           <div class="allmenu3">
+               <div class="container">
+                   <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all10.jpg" alt="">
+                   <div class="opaciallmenu"></div>
+                   <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all4.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all7.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all12.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all1.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all5.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+                   </div>
+               </div>
+           </div>
+           <div class="allmenu4">
+               <div class="container">
+                   <div class="row">
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all9.jpg" alt="">
+                   <div class="opaciallmenu"></div>
+                   <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all11.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all6.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="imgallmenu">
+                    <img src="img/all8.jpg" alt="">
+                    <div class="opaciallmenu"></div>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+                   </div>
+               </div>
+           </div>
         </div>
     </div>
     </section>
@@ -353,5 +455,6 @@
     <script src="js/aos.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/granny.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 </html>
